PlzNavigate: Fix wrong "Cache-Control" header.

This CL modify the FrameLoadType of frames such that the
ReloadBypassingCache load type gets propagated to every subframe during
a reload.

It fixes ReloadCacheControlBrowserTest.BypassingReload test with
PlzNavigate. Every ReloadCacheControlbroserTest are passing now.

BUG=671545
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_chromium_browser_side_navigation_rel

Review-Url: https://codereview.chromium.org/2863683003
Cr-Commit-Position: refs/heads/master@{#471029}

Former-commit-id: e7a445657ac1fa61217eb9097cd83a5a009a0a50