third_party/WebKit/Source/core/loader/FrameFetchContext.cpp
@@ -228,6 +228,10 @@ void FrameFetchContext::AddAdditionalRequestHeaders(ResourceRequest& request,
     request.SetHTTPHeaderField("Save-Data", "on");
 }
 
+// TODO(toyoshim, arthursonzogni): PlzNavigate doesn't use this function to set
+// the ResourceRequest's cache policy. The cache policy determination needs to
+// be factored out from FrameFetchContext and moved to the FrameLoader for
+// instance.
 WebCachePolicy FrameFetchContext::ResourceRequestCachePolicy(
     const ResourceRequest& request,
     Resource::Type type,
